--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Header with Name and Navigation -->
     <header>
-      <h1>Mariana González-Moro</h1>
+      <img src="assets/images/name.png" alt="Your Name" class="site-logo" />
       <p class="subtitle">design portfolio</p>
       <nav>
         <ul>
