addition of assets

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mariana González-Moro - Portfolio" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="assets/css/index.css" />
     <title>Mariana González-Moro - Portfolio</title>
   </head>
@@ -25,42 +29,64 @@
     <main>
       <!-- Featured Work Section -->
       <section id="work">
-        <h2>Recent Work</h2>
+        <img
+          src="assets/images/recent work.png"
+          alt="Recent Work"
+          class="section-title"
+        />
 
         <!-- Project 1 -->
         <article class="project">
-          <img
-            src="https://via.placeholder.com/800x600/f0f0f0/333333?text=Project+1"
-            alt="Project 1"
-          />
-          <h3>Project Title One</h3>
-          <p>Brief description of the project, medium, dimensions, 2025</p>
+          <video
+            class="project-video"
+            src="assets/images/glasses.mp4"
+            autoplay
+            muted
+            loop
+            playsinline
+            controls
+            aria-label="Project 1 video: glasses"
+          ></video>
+          <h3>3D Animation</h3>
+          <p>Short loop animation of 3D sunglasses. 2025.</p>
         </article>
 
         <!-- Project 2 -->
         <article class="project">
-          <img
-            src="https://via.placeholder.com/800x600/f0f0f0/333333?text=Project+2"
-            alt="Project 2"
-          />
-          <h3>Project Title Two</h3>
-          <p>Brief description of the project, medium, dimensions, 2025</p>
+          <video
+            class="project-video"
+            src="assets/images/lost.mp4"
+            autoplay
+            muted
+            loop
+            playsinline
+            controls
+            aria-label="Project 2 video: lost"
+          ></video>
+          <h3>Visual Manifesto</h3>
+          <p>Stop motion animation that reflects my creative process</p>
         </article>
 
         <!-- Project 3 -->
         <article class="project">
-          <img
-            src="https://via.placeholder.com/800x600/f0f0f0/333333?text=Project+3"
-            alt="Project 3"
-          />
-          <h3>Project Title Three</h3>
-          <p>Brief description of the project, medium, dimensions, 2025</p>
+          <video
+            class="project-video"
+            src="assets/images/boots.mp4"
+            autoplay
+            muted
+            loop
+            playsinline
+            controls
+            aria-label="Project 3 video: boots"
+          ></video>
+          <h3>Howdy</h3>
+          <p>3D animation of my cowboy boot</p>
         </article>
       </section>
 
       <!-- About Section -->
       <section id="about">
-        <h2>About</h2>
+        <img src="assets/images/about.png" alt="About" class="section-about" />
         <p>
           I am a [your profession] based in [your location]. My work explores
           [your themes or interests].
@@ -74,25 +100,29 @@
 
       <!-- Contact Section -->
       <section id="contact">
-        <h2>Contact</h2>
-        <p>your.email@example.com</p>
+        <img
+          src="assets/images/contact.png"
+          alt="Contact"
+          class="section-contact"
+        />
+        <p>marianagonzalezmoro@gmail.com</p>
         <p>
-          <a href="https://instagram.com/yourusername" target="_blank"
+          <a href="https://instagram.com/marianagmoro" target="_blank"
             >Instagram</a
           >
           |
-          <a href="https://linkedin.com/in/yourusername" target="_blank"
+          <a href="https://linkedin.com/in/marianagmoro" target="_blank"
             >LinkedIn</a
           >
           |
-          <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+          <a href="https://github.com/marianagmoro" target="_blank">GitHub</a>
         </p>
       </section>
     </main>
 
     <!-- Footer -->
     <footer>
-      <p>&copy; 2025 Your Name. All rights reserved.</p>
+      <p>&copy; 2025 Mariana Gonzalez-Moro. All rights reserved.</p>
     </footer>
   </body>
 </html>
