--- a/index.html
+++ b/index.html
@@ -178,6 +178,45 @@
               </tr>
             </tbody>
           </table>
+          <!-- Mobile-friendly skills list (shown on small screens) -->
+          <ul class="skills-list" aria-hidden="true">
+            <li class="skill-item">
+              <span class="skill-name">Photoshop</span
+              ><span class="badge expert">Expert</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">Illustrator</span
+              ><span class="badge expert">Expert</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">Premiere Pro</span
+              ><span class="badge expert">Expert</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">Cinema 4D</span
+              ><span class="badge expert">Expert</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">Procreate</span
+              ><span class="badge expert">Expert</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">Figma</span
+              ><span class="badge intermediate">Intermediate</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">Visual Studio</span
+              ><span class="badge intermediate">Intermediate</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">InDesign</span
+              ><span class="badge beginner">Beginner</span>
+            </li>
+            <li class="skill-item">
+              <span class="skill-name">After Effects</span
+              ><span class="badge beginner">Beginner</span>
+            </li>
+          </ul>
         </div>
       </section>
 
