added hero section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Header with Name and Navigation -->
     <header>
       <img src="assets/images/name.png" alt="Your Name" class="site-logo" />
-      <p class="subtitle">design portfolio</p>
+      <p class="subtitle">graphic design portfolio</p>
       <!-- Mobile nav toggle -->
       <button
         id="navToggle"
@@ -34,6 +34,28 @@
         </ul>
       </nav>
     </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-content">
+        <img
+          src="assets/images/creative.png"
+          alt="Creative Designer"
+          class="hero-title-image"
+        />
+        <p class="hero-subtitle">
+          Bringing ideas to life through 3D animation, visual storytelling, and
+          innovative design solutions
+        </p>
+        <div class="hero-cta">
+          <a href="#work" class="btn-primary">view my work</a>
+          <a href="#contact" class="btn-secondary">get in touch</a>
+        </div>
+      </div>
+      <div class="hero-visual">
+        <div class="hero-gradient"></div>
+      </div>
+    </section>
 
     <!-- Main Content -->
     <main>
@@ -58,7 +80,7 @@
             aria-label="Project 1 video: glasses"
           ></video>
           <h3>3D Animation</h3>
-          <p>Short loop animation of 3D sunglasses. 2025.</p>
+          <p>Fragment of sunglasses commercial. 2025.</p>
         </article>
 
         <!-- Project 2 -->
@@ -74,7 +96,7 @@
             aria-label="Project 2 video: lost"
           ></video>
           <h3>Visual Manifesto</h3>
-          <p>Stop motion animation that reflects my creative process</p>
+          <p>Stop motion animation that reflects my creative process. 2025</p>
         </article>
 
         <!-- Project 3 -->
@@ -90,7 +112,7 @@
             aria-label="Project 3 video: boots"
           ></video>
           <h3>Howdy</h3>
-          <p>3D animation of my cowboy boot</p>
+          <p>3D animation of my cowboy boot. 2025.</p>
         </article>
       </section>
 
